[package]
name = "pager"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
termimad = "0.33.0"
git2 = "0.20.2"
toml = "0.8.23"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.98"
indicatif = "0.17.11"
path-absolutize = "3.1.1"
tokio = { version = "1.45.1", features = ["full"] }
futures = "0.3.31"
